Change log for zeit.web
=======================

POSTDEPLOY
----------

3.17 (unreleased)
-----------------

- ZON-3287: Track login entrypoint, stored in master cookie

- FIX: Be defensive about deleted parent comments

- FIX: Be defensive about still images for nonexistent videos

- MAINT: Fix typography for .x-footer--borderless


3.16 (2016-11-02)
-----------------

- ZON-3449: Specify fallback for missing packshot image

- BUG-568: Consider favorite content when offsetting author area pages

- BUG-553: Restore adtile in comment thread

- MAINT: Send referrer and user-agent to solr

- OPS-414: Fix volume navi in IE10

- BUG-570: Fix one hour global content caching time

- FIX: Be defensive about property access


3.15 (2016-10-31)
-----------------

- ZON-3403: Update IVW code for paid content

- ZON-3404: Change clicktracking ID for Z+ packshots in article header

- ZON-3410: Add ressort area for exclusive page

- ZON-3314: Paywall base templates

- BUG-554: Let headerimages overlay on tubes

- BUG-565: Show volume badge for free accessible print articles and Z+ logo for paid articles only

- FIX: Fallbacks and polishing for volume header


3.14 (2016-10-25)
-----------------

- ZON-3346: Consider display density (device pixel ratio) for infographics

- ZON-3236: Don't cache sitemaps in varnish at all (Afterwards merge/deploy varnish)

- ZON-2968: Shorten byline on centerpages

- ZON-3314: Implement paywall property on views

- ZON-3376: Hide source for articles with volume badge in header

- BUG-563: Fix ZMO article header for subscription articles

- BUG-561: Unveil Z+ badge for ZMO parquet teasers

- MAINT: Report facebook instant articles for IVW properly


3.13 (2016-10-20)
-----------------

- ZON-3355: Add volume badge for AMP articles

- ZON-3375: Ensure linked image templates can handle nofollow flag

- BUG-542: Fix ZMO gallery captions

- BUG-555: Remove styles for unused image display modes
