@@ -15,6 +15,8 @@ POSTDEPLOY
 
 - MAINT: Fix typography for .x-footer--borderless
 
+- MAINT: Use sensible default caching times
+
 
 3.16 (2016-11-02)
 -----------------
